@@ -1,3 +1,9 @@
+2003-12-17  Vince Darley  <vincentdarley@users.sourceforge.net>
+
+	* generic/tclPathObj.c: 
+	* tests/fileSystem.test: fix and tests for [Bug 860402] in new 
+	file normalization code.
+	
 2003-12-17  Zoran Vasiljevic  <zv@archiware.com>
 
 	* generic/tclIOUtil.c: fixed 2 memory (object) leaks.
